--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,9 @@
     
 }
 
-/*.counter-section{
+.counter-section{
   display: flex;
   align-content: center;
   flex-direction: column;
   justify-content: center;
-}*/
+}
