--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,19 @@
 .counter-section p{
   font-size: 30px;
 }
+
+.saludo{
+  font-size: 150px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-shadow: 0 0 10px #222,1px 1px  0 #450505;
+	color: rgb(83, 7, 7);
+  animation: latidos .9s infinite;
+	transform-origin: center;
+
+}
+
+@keyframes latidos {
+  from { transform: none; }
+  50% { transform: scale(1.4); }
+  to { transform: none; }
+}
